--- a/photos/templates/photos/photo.html
+++ b/photos/templates/photos/photo.html
@@ -11,12 +11,28 @@
 <body class="m-5">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col">
+            <div class="col-md-6">
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
                 <div style="height: 90vh;">
                     <img style="max-width: 100%; max-height: 100%;" src="{{photo.image.url}}" alt="">
-                    <p>{{photo.description}}</p>
+                    <p class="text-center">{{photo.description}}</p>
                 </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 padding-1 mt-2">
+                    <input id="{{photo.id}}-url" class="form-control input-md responsive" type="text"
+                        value="{{photo.image.url}}">
+                </div>
+
+                <button class="mt-3" type="button" onclick="copyToClipboard();">Copy</button>
+
+                <script>
+                    function copyToClipboard() {
+                        var copyText = document.getElementById("{{photo.id}}-url");
+                        copyText.select();
+                        copyText.setSelectionRange(0, 99999)
+                        document.execCommand("copy");
+                        alert('url copied');
+                    }
+                </script>
             </div>
 
         </div>
