--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -51,13 +51,15 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-md">
-          <a style="color: aliceblue; margin-left: 3rem;" class="navbar-brand" href="#">Navbar</a>
-          <form class="navbar-form" role="search" action="">
+          <a style="color: aliceblue; margin-left: 3rem;" class="navbar-brand" href="{% url 'gallery' %}">Gallery</a>
+          <form class="navbar-form" role="search" action="" method = "POST">
+
+            {% csrf_token %}
 
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search Category" name="category">
               <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <button class="btn btn-light" type="submit">submit<i class="glyphicon glyphicon-search"></i></button>
               </div>
             </div>
             
